--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <section id="about">
         <h2>Про мене</h2>
-        <p>Мене звати Тарас Шевченко. Я - учень курсу інформатики, який:</p>
+        <p>Мене звати Нікіташ Дарина. Я - учень курсу інформатики, який:</p>
         <ul>
             <li>Вивчає основи розробки ігор</li>
             <li>Практикується у створенні інтерактивних проєктів</li>
