--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Особисті проєкти Тараса Шевченка</title>
+    <title>Welcome to the "Alien stage"</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -32,7 +32,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2024 Тарас Шевченко. Усі права захищені.</p>
+        <p>&copy; 2025 Нікіташ Дарина. Усі права захищені.</p>
     </footer>
 </body>
 </html> 
