--- a/example-project/index.html
+++ b/example-project/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Проєкт на GDevelop: Пригодницька гра 🎮</h1>
+        <h1>Проєкт на GDevelop: Black Sorrow</h1>
     </header>
 
     <section id="project-overview">
