--- a/example-project/index.html
+++ b/example-project/index.html
@@ -71,7 +71,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2024 Тарас Шевченко | <a href="../index.html">Назад до проєктів</a></p>
+        <p>&copy; 2025 Нікіташ Дарина | <a href="../index.html">Назад до проєктів</a></p>
     </footer>
 </body>
 </html>
