--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Ласкаво прошу до моїх особистих проєктів</h1>
+        <h1>Ласкаво прошу до мого проєкту</h1>
     </header>
 
     <section id="about">
@@ -22,11 +22,11 @@
     </section>
 
     <section id="projects">
-        <h2>Проєкти</h2>
+        <h2>Проєкт</h2>
         <ul>
             <li>
                 <h3><a href="example-project/index.html">Пригодницька гра на GDevelop</a></h3>
-                <p>Цей проєкт демонструє можливості платформи GDevelop для створення 2D-ігор. У грі гравець керує персонажем, який досліджує світ, збирає предмети та уникає перешкод.</p>
+                <p>Цей проєкт демонструє можливості платформи GDevelop для створення 2D-ігор. У грі гравець керує персонажем, який продожує жити поки стикається з метеоритами поглинаючи їх , сенс гри в тому щоб протриматися </p>
             </li>
         </ul>
     </section>
