--- a/index.html
+++ b/index.html
@@ -25,8 +25,12 @@
         <h2>Проєкт</h2>
         <ul>
             <li>
-                <h3><a href="example-project/index.html">Пригодницька гра на GDevelop</a></h3>
-                <p>Цей проєкт демонструє можливості платформи GDevelop для створення 2D-ігор. У грі гравець керує персонажем, який продожує жити поки стикається з метеоритами поглинаючи їх , сенс гри в тому щоб протриматися </p>
+                <h3><a href="example-project/index.html">Гра на GDevelop</a></h3>
+                <p>Пригодницька гра на GDevelop
+
+                    Цей проєкт створено за мотивами серії аудіокліпів Alien Stage, у рамках якої персонажі змагаються у вокальному батлі під наглядом прибульців, які захопили світ. Один із раундів цієї серії має назву Black Sorrow, саме він став основою для гри.
+                    
+                    У грі гравець керує персонажем, який намагається вижити, уникаючи метеоритів. Метеорити символізують труднощі, які герой повинен подолати. Сенс гри — протриматися якомога довше, набираючи очки за кожне успішне уникнення. </p>
             </li>
         </ul>
     </section>
