--- a/example-project/index.html
+++ b/example-project/index.html
@@ -13,7 +13,7 @@
 
     <section id="project-overview">
         <h2>Огляд проєкту 📜</h2>
-        <p>ЦГра створена у середовищі GDevelop та демонструє його можливості для розробки 2D-ігор. Основна механіка полягає в ухиленні від перешкод (метеоритів), які з’являються випадковим чином.
+        <p>Гра створена у середовищі GDevelop та демонструє його можливості для розробки 2D-ігор. Основна механіка полягає в ухиленні від перешкод (метеоритів), які з’являються випадковим чином.
 
             Гравець управляє персонажем, що рухається ліворуч або праворуч, поки триває музика Black Sorrow, яка запускається на початку сцени.</p>
         
