--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <ul>
             <li>
                 <h3><a href="example-project/index.html">Гра на GDevelop</a></h3>
-                <p>Пригодницька гра на GDevelop
+                <p>Гра на GDevelop
 
                     Цей проєкт створено за мотивами серії аудіокліпів Alien Stage, у рамках якої персонажі змагаються у вокальному батлі під наглядом прибульців, які захопили світ. Один із раундів цієї серії має назву Black Sorrow, саме він став основою для гри.
                     
